[gd_scene load_steps=4 format=3 uid="uid://cr2te1lp3jvc4"]

[ext_resource type="Script" uid="uid://d30m4op3wcjve" path="res://scripts/Player with climb.gd" id="1"]

[sub_resource type="CapsuleMesh" id="3"]
height = 1.2
radial_segments = 32

[sub_resource type="CapsuleShape3D" id="2"]
height = 1.2

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1")

[node name="Player" type="Node3D" parent="."]

[node name="mesh" type="CSGMesh3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("3")

[node name="CSGBox3D" type="CSGBox3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -0.5)
layers = 7
size = Vector3(0.5, 0.5, 0.7)

[node name="Wall_check" type="Node3D" parent="Player"]

[node name="wall_check" type="RayCast3D" parent="Player/Wall_check"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
target_position = Vector3(0, 0, -1)

[node name="still_on_wall_check" type="RayCast3D" parent="Player/Wall_check"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00539631, 0)
target_position = Vector3(0, 0, -1)

[node name="Stick_point_holder" type="Marker3D" parent="Player/Wall_check"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)

[node name="Stick_point" type="Marker3D" parent="Player/Wall_check/Stick_point_holder"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
shape = SubResource("2")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Camera_holder" type="Node3D" parent="Head"]

[node name="Camera3D" type="Camera3D" parent="Head/Camera_holder"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)
current = true
